--- a/package.json
+++ b/package.json
@@ -16,5 +16,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "axios": "^1.12.2",
+    "clsx": "^2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1",
+    "react-hook-form": "^7.63.0",
+    "tailwindcss": "^4.1.13",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5.9.2",
+    "zod": "^4.1.11"
   }
 }
