--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "peerDependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
