--- a/tsconfig.json
+++ b/tsconfig.json
@@ -117,6 +117,6 @@
 
     // custom options below
   },
-  "include": ["src"],
+  "include": ["src", "../private/src/pages/loading-states.tsx"],
   "exclude": ["node_modules", "dist", "build", "scripts", "**/*.test.ts", "**/*test.tsx", "**/*.spec.ts", "**/*.spec.tsx"],
 }
